docs(endpoints): update all endpoint docs to match real API route groups and

--- a/content/2.endpoints/1.stickers.md
+++ b/content/2.endpoints/1.stickers.md
@@ -1,14 +1,17 @@
 ---
 title: Stickers
-description: Search stickers, get recommendations, and find related stickers.
+description: Endpoints for searching, recommending, and finding related stickers.
 navigation:
   icon: i-lucide-sticker
 ---
 ## Search
-Retrieve stickers by searching with keywords.
+`GET /api/v1/stickers/search`
+Search for stickers by keyword.
 
 ## Recommended
-Get a list of stickers recommended by Sticker.ly.
+`GET /api/v1/stickers/recommended`
+Get a list of recommended stickers.
 
-## Related
-Find other stickers related to a specific sticker ID.
+## Related by ID
+`GET /api/v1/stickers/[id]/related`
+Get stickers related to a specific sticker ID.
