--- a/content/2.endpoints/2.packs.md
+++ b/content/2.endpoints/2.packs.md
@@ -1,17 +1,21 @@
 ---
 title: Packs
-description: Search sticker packs, get recommendations, and find related packs.
+description: Endpoints for searching, recommending, and finding related packs.
 navigation:
   icon: i-lucide-package
 ---
 ## Search
-Search for sticker packs by keywords.
+`GET /api/v1/packs/search`
+Search for sticker packs by keyword.
+
+## Recommended
+`GET /api/v1/packs/recommended`
+Get a list of recommended packs.
 
 ## Pack by ID
-Retrieve a sticker pack by its ID.
+`GET /api/v1/packs/[id]`
+Get a sticker pack by its ID.
 
 ## Related by ID
-Find sticker packs related to a specific pack ID.
-
-## Recommend
-Get recommended sticker packs.
+`GET /api/v1/packs/[id]/related`
+Get packs related to a specific pack ID.
