refactor(index): update introduction and enhance getting started section
- Change title from "Introduction" to "Getting Started"
- Add SEO metadata for better search visibility
- Expand content to include usage examples and available endpoints

--- a/content/1.getting-started/1.index.md
+++ b/content/1.getting-started/1.index.md
@@ -1,8 +1,44 @@
 ---
-title: Introduction
-description: Welcome to the Sticker.ly API Wrapper documentation. This guide will help you get started with integrating Sticker.ly's features into your applications.
-navigation:
-  icon: i-lucide-house
+title: Getting Started
+seo:
+  title: Getting Started with Sticker.ly API Wrapper
+  description: Learn how to quickly use the public Sticker.ly API endpoints to search, discover, and integrate stickers and packs.
 ---
 
-Work in progress...
+# Getting Started
+
+Welcome to the Sticker.ly API Wrapper! This is a public HTTP API that lets you search, discover, and integrate Sticker.ly stickers, packs, tags, and artists into your own apps or tools.
+
+## How It Works
+
+You can access the API using any HTTP client (like curl, Postman, or fetch in JavaScript). No authentication is required.
+
+## Example: Search for Stickers
+
+### Using curl
+```sh
+curl "https://your-domain.com/api/v1/stickers/search?q=funny+cats"
+```
+
+### Using JavaScript (fetch)
+```js
+fetch('https://your-domain.com/api/v1/stickers/search?q=funny cats')
+  .then(res => res.json())
+  .then(data => console.log(data));
+```
+
+Replace `your-domain.com` with your actual deployment URL if self-hosted.
+
+## Available Endpoints
+
+- Stickers: `/api/v1/stickers/*`
+- Packs: `/api/v1/packs/*`
+- Tags: `/api/v1/tags/*`
+- Artists: `/api/v1/artists/*`
+- Home Tabs: `/api/v1/home-tabs/*`
+
+See the [API Endpoints](/endpoints) section for full details and parameters for each endpoint.
+
+---
+
+Need help? [Open an issue](https://github.com/sergiooak/sticker-ly-api-wrapper/issues) or check the documentation for more examples.
