--- a/content/1.getting-started/1.index.md
+++ b/content/1.getting-started/1.index.md
@@ -17,17 +17,17 @@ You can access the API using any HTTP client (like curl, Postman, or fetch in Ja
 
 ### Using curl
 ```sh
-curl "https://your-domain.com/api/v1/stickers/search?q=funny+cats"
+curl "https://sticker-ly-api.sergiooak.com.br/api/v1/stickers/search?q=funny+cats"
 ```
 
 ### Using JavaScript (fetch)
 ```js
-fetch('https://your-domain.com/api/v1/stickers/search?q=funny cats')
+fetch('https://sticker-ly-api.sergiooak.com.br/api/v1/stickers/search?q=funny cats')
   .then(res => res.json())
   .then(data => console.log(data));
 ```
 
-Replace `your-domain.com` with your actual deployment URL if self-hosted.
+Replace `sticker-ly-api.sergiooak.com.br` with your actual deployment URL if self-hosted.
 
 ## Available Endpoints
 
@@ -36,8 +36,6 @@ Replace `your-domain.com` with your actual deployment URL if self-hosted.
 - Tags: `/api/v1/tags/*`
 - Artists: `/api/v1/artists/*`
 - Home Tabs: `/api/v1/home-tabs/*`
-
-See the [API Endpoints](/endpoints) section for full details and parameters for each endpoint.
 
 ---
 
